# hrt

./: CHANGELOG.md  cabal.project  hrt.cabal  shell.nix
app/: Cgfs-02-basic-raytracing.hs  Cgfs-03-light-diffuse-reflection.hs  Cgfs-03-light-specular-reflection.hs  Cgfs-03-light.hs  Cgfs-04-shadows.hs  Cgfs-04b-reflections.hs  Cgfs-05.hs  Main.hs
src/: Hrt.hs
src/Hrt/: IO.hs  Scene.hs
test/: DemoScene.hs  demoscene.yaml
