cabal-version:      2.4
name:               hrt
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Benjamin Staffin
maintainer:         benley@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cgfs-02-basic-raytracing
    main-is:          Cgfs-02-basic-raytracing.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
                    , linear ^>=1.21.8
                    , colour ^>=2.3.6
                    , JuicyPixels ^>=3.3.7
    hs-source-dirs:   app
    default-language: Haskell2010

executable cgfs-03-light
    main-is:          Cgfs-03-light.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
                    , linear ^>=1.21.8
                    , colour ^>=2.3.6
                    , JuicyPixels ^>=3.3.7
    hs-source-dirs:   app
    default-language: Haskell2010
