cabal-version:      2.4
name:               hrt
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Benjamin Staffin
maintainer:         benley@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.1.0
      , linear ^>=1.21.8
      , colour ^>=2.3.6
      , JuicyPixels ^>=3.3.7

executable cgfs-02-basic-raytracing
    import: deps
    main-is:          Cgfs-02-basic-raytracing.hs
    hs-source-dirs:   app

executable cgfs-03-light-diffuse-reflection
    import: deps
    main-is:          Cgfs-03-light-diffuse-reflection.hs
    hs-source-dirs:   app

executable cgfs-03-light-specular-reflection
    import: deps
    main-is:          Cgfs-03-light-specular-reflection.hs
    hs-source-dirs:   app

executable cgfs-04-shadows
    import: deps
    main-is:          Cgfs-04-shadows.hs
    hs-source-dirs:   app

executable cgfs-04b-reflections
    import: deps
    main-is:          Cgfs-04b-reflections.hs
    hs-source-dirs:   app
